fixed horizontal scrolling issue

--- a/less/global/sections/header.less
+++ b/less/global/sections/header.less
@@ -17,14 +17,16 @@ header {
         .mobile-menu-dropdown {
             background-color: white;
             max-height: 0;
-            transition: max-height ease-in-out 0.5s;
+            transition: max-height ease-in-out 0.25s;
             position: absolute;
             top: calc(100% + 10px);
             right: 0;
             overflow: hidden;
             border-left: 1px @gray solid;
             box-shadow: 1px 1px 3px @gray;
-
+            padding-left: 10px;
+            padding-right: 10px;
+            
             ul {
                 list-style-type: none;
                 padding: 0;
@@ -57,7 +59,7 @@ header {
         &.open {
             .mobile-menu-dropdown {
                 padding: 10px;
-                max-height: 100vh;
+                max-height: 70vh;
             }
         }
     }
